# i-searcher

./: README.md
src/: CMakeLists.txt  main.cpp
src/common/: Document.cpp  DocumentCollection.cpp  InverseIndex.cpp
src/include/: Document.h  DocumentCollection.h  IRanger.h  ISearchEngine.h  IStemmer.h  ITokenizer.h  LocalSearchEngine.h  Stemmer.h
src/include/common/: Document.h  DocumentCollection.h  InverseIndex.h
src/include/ranger/: BM25Ranger.h  IRanger.h
src/include/search_engine/: ISearchEngine.h  LocalSearchEngine.h
src/include/serialization/: BinaryDocumentDeserializer.h  BinaryDocumentSerializer.h  DeserializationHelper.h  IDocumentDeserializer.h  IDocumentSerializer.h  InverseIndexDeserializer.h  InverseIndexSerializer.h  SerializationHelper.h
src/include/stemmer/: IStemmer.h  RussianStemmer.h  StopWords.h
src/include/storage/: DocumentParser.h  FileSystemIndexRepository.h  IIndexRepository.h
src/include/tokenizer/: FilterTokenizerDecorator.h  ITokenizer.h  StreamTokenizer.h  StringTokenizer.h  WordCleanerTokenizerDecorator.h
src/include/workload/: ISearchApplication.h  InitOptions.h  QueryOptions.h
src/ranger/: BM25Ranger.cpp
src/search_engine/: LocalSearchEngine.cpp
src/serialization/: BinaryDocumentDeserializer.cpp  BinaryDocumentSerializer.cpp  DeserializationHelper.cpp  InverseIndexDeserializer.cpp  InverseIndexSerializer.cpp  SerializationHelper.cpp
src/stemmer/: RussianStemmer.cpp  RussianStemmer.h  StopWords.cpp
src/storage/: DocumentParser.cpp  FileSystemIndexRepository.cpp
src/tokenizer/: FilterTokenizerDecorator.cpp  FilterTokenizerDecorator.h  StreamTokenizer.cpp  StreamTokenizer.h  StringTokenizer.cpp  WordCleanerTokenizerDecorator.cpp  WordCleanerTokenizerDecorator.h
src/workload/: ISearchApplication.cpp  InitOptions.cpp  QueryOptions.cpp
